--- a/api/package.json
+++ b/api/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "express": "^5.2.1",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.6"
   }
 }
